--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    ExpenseReport{{title}}!
+    ExpenseReport {{title}}!
   </h1>
-
 </div>
+<app-greeting></app-greeting>
+<br>
+<app-expense></app-expense>
