--- a/src/app/addreport/addreport.component.html
+++ b/src/app/addreport/addreport.component.html
@@ -1,52 +1,63 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <div class="card" style="width: 90%;" align="center">
-    <!--<img class="card-img-top" src="..." alt=" image cap">-->
-    <div class="card-body">
-      <h4 class="card-title">ExpenseReport<br> {{report.employee}}</h4>
-      <!--<p class="card-text"> asfd asdf asdf</p>-->
-      <a href="#" class="btn btn-primary">NewReport</a>
-        <a href="#" class="btn btn-primary">History</a>
+<div *ngIf="!name; else forminfo">
+  <form class="form-horizontal" [formGroup]="rForm" (ngSubmit)="addPost(rForm.value)">
+    <div class="form-container">
+      <div class="row columns">
+        <label>Name
+          <input type="text" formControlName="name">
+        </label>
+        <label>Start Date
+          <input type="date" formControlName="startDate">
+        </label>
+        <label>End Date
+          <input type="date" formControlName="endDate">
+        </label>
+        <label>Issuer
+          <input type="text" formControlName="issuer">
+        </label>
+        <label>Content
+          <input type="text" formControlName="content">
+        </label>
+        <label>Field
+          <input type="text" formControlName="field">
+        </label>
+        <label>Project
+          <input type="text" formControlName="project">
+        </label>
+        <label>SUM.
+          <input type="number" formControlName="sum">
+        </label>
+        <label>Currency
+          <input type="text" formControlName="currency">
+        </label>
+        <label>SUM EUR
+          <input type="text" formControlName="sumEur">
+        </label>
+        <label>Credit Card
+          <input [(ngModel)]="creditCard" type="checkbox"/>
+        </label>
+        <!--<label>Description-->
+        <!--<textarea formControlName="description"></textarea>-->
+        <!--</label>-->
+
+      </div>
     </div>
+  </form>
+</div>
+
+<div class="card" align="right">
+  <div class="card-body">
+    <input type="submit" class="button" value="+ NEW expense row" [disabled]="!rForm.valid">
+
+    <input type="submit" class="button expanded" value="Submit Form!" [disabled]="!rForm.valid">
   </div>
-  <table *ngIf="report" class="table table-bordered" style="width: 90%;" >
-    <thead>
-    <tr>
-      <td>NR.</td>
-      <td>DATE</td>
-      <td>CONTENT</td>
-      <td>FIELD</td>
-      <td>ISSUER</td>
-      <td>PROJECT</td>
-      <td>CRED.CARD</td>
-      <td>SUM</td>
-      <td>CURRENCY</td>
-      <td>SUM(EUR)</td>
-    </tr>
-    </thead>
-    <tbody>
 
+  <ng-template #forminfo>
+    <div class="form-container">
+      <div class="row columns">
+        <h1>{{ name }}</h1>
 
-    <tr *ngFor="let document of report.documents">
-      <td>{{ document.docId }}</td>
-      <td>{{ document.date | date:'yMd'}}</td>
-      <td>{{ document.content }}</td>
-      <td>{{ document.field }}</td>
-      <td>{{ document.issuer }}</td>
-      <td>{{ document.project }}</td>
-      <td>{{ document.creditCard }}</td>
-      <td>{{ document.sum }}</td>
-      <td>{{ document.currency }}</td>
-      <td>{{ document.sumEur }}</td>
-
-    </tr>
-    </tbody>
-  </table>
-  <div class="card" style="width: 90%;" align="right">
-    <!--<img class="card-img-top" src="..." alt=" image cap">-->
-    <div class="card-body">
-      <h4 class="card-title">TOTAL SUM: {{report.expenseSum}}</h4>
-      <!--<p class="card-text"> asfd asdf asdf</p>-->
+        <!--<p>{{ description }}</p>-->
+      </div>
     </div>
-
+  </ng-template>
 </div>
