--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,71 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <div class="card block" >
+  <div class="card block">
     <!--<img class="card-img-top" src="..." alt=" image cap">-->
     <div class="card-body">
       <h4 class="card-title">ExpenseReport <br></h4>
-      <a href="#" class="btn btn-primary">NewReport</a><a href="#" class="btn btn-primary">History</a>
+      <a routerLink="/addreport" class="btn btn-primary">NewReport</a><a routerLink="/reportsview"
+                                                                         class="btn btn-primary">History</a>
     </div>
   </div>
-
-
-  <div *ngIf="!name; else forminfo">
-    <form class="form-horizontal" [formGroup]="rForm" (ngSubmit)="addPost(rForm.value)">
-      <div class="form-container">
-        <div class="row columns">
-          <label>Name
-            <input type="text" formControlName="name">
-          </label>
-          <label>Start Date
-            <input type="date" formControlName="startDate">
-          </label>
-          <label>End Date
-            <input type="date" formControlName="endDate">
-          </label>
-          <label>Issuer
-            <input type="text" formControlName="issuer">
-          </label>
-          <label>Content
-            <input type="text" formControlName="content">
-          </label>
-          <label>Content
-            <input type="text" formControlName="content">
-          </label>
-          <label>Exp.Rep.
-            <input type="text" formControlName="content">
-          </label>
-          <label>SUM.
-            <input type="number" formControlName="content">
-          </label>
-          <label>Exp.Rep.
-            <input type="text" formControlName="content">
-          </label>
-          <label>Currency
-            <input type="text" formControlName="content">
-          </label>
-          <label>SUM EUR
-            <input type="text" formControlName="content">
-          </label>
-          <label>Cred.Card
-            <input type="text" formControlName="content">
-          </label>
-          <label>Description
-            <textarea formControlName="description"></textarea>
-          </label>
-
-
-          <input type="submit" class="button expanded" value="Submit Form" [disabled]="!rForm.valid">
-        </div>
-      </div>
-    </form>
+  <div class="container">
+    <router-outlet></router-outlet>
   </div>
-
-  <ng-template #forminfo>
-    <div class="form-container">
-      <div class="row columns">
-        <h1>{{ name }}</h1>
-
-        <p>{{ description }}</p>
-      </div>
-    </div>
-  </ng-template>
+</div>
