--- a/src/app/reportview/reportview.component.html
+++ b/src/app/reportview/reportview.component.html
@@ -1,27 +1,33 @@
-<div style="text-align:center">
-  <div class="card block">
-    <div class="card-body">
-
-      <h4 class="card-title"> Employee: {{ report.employee}}</h4>
+<div class="card block">
+  <div class="card-body report-header">
+    <h4 class="card-title">Report ID: <b>{{report.reportId}}</b></h4>
+    <div align="left">
+      <h5 class="card-title">Employee: <b>{{report.employee}}</b></h5>
+      <h5 class="card-title">Report period: <b>{{report.startDate | date:'yMd'}} - {{report.endDate | date:'yMd'}}</b></h5>
     </div>
-  </div>
-  <div class="container">
   </div>
 </div>
 
-<table *ngIf="report" class="table table-bordered">
-  <thead>
+<div class="card block">
+  <div class="card-body">
+  <div style="text-align: left">
+    <h3>Expense documents</h3>
+  </div>
+
+
+<table *ngIf="report" class="table table-condensed">
+  <thead class="">
   <tr>
-    <td>NR.</td>
-    <td>DATE</td>
-    <td>CONTENT</td>
-    <td>FIELD</td>
-    <td>ISSUER</td>
-    <td>PROJECT</td>
-    <td>CRED.CARD</td>
-    <td>SUM</td>
-    <td>CURRENCY</td>
-    <td>SUM(EUR)</td>
+    <td></td>
+    <td class="text-center">Date</td>
+    <td class="text-center">Content</td>
+    <td class="text-center">Field</td>
+    <td class="text-center">Issuer</td>
+    <td class="text-center">Project</td>
+    <td class="text-center">Credit card</td>
+    <td class="text-center">Sum</td>
+    <td class="text-center">Currency</td>
+    <td class="text-center">Sum (EUR)</td>
   </tr>
   </thead>
   <tbody>
@@ -34,17 +40,31 @@
     <td>{{ document.field }}</td>
     <td>{{ document.issuer }}</td>
     <td>{{ document.project }}</td>
-    <td>{{ document.creditCard }}</td>
+    <td> <input type="checkbox" [checked]="document.creditCard" disabled> </td>
     <td>{{ document.sum }}</td>
     <td>{{ document.currency }}</td>
-    <td>{{ document.sumEur }}</td>
+    <td style="font-weight: 600">{{ document.sumEur }}</td>
 
   </tr>
   </tbody>
 </table>
+  </div>
+</div>
+
 <div class="card" align="right">
   <div class="card-body">
-    <h4 class="card-title">TOTAL SUM: {{report.expenseSum}}</h4>
+    <h5 class="card-title">Total expenses: <b>{{report.expenseSum}} €</b></h5>
+    <h5 class="card-title">Paid with credit card: <b>{{report.creditSum}} €</b></h5>
+    <hr>
+    <div class="report-end">
+      <div>
+        <a routerLink="/reportsview" class="btn btn-info"><< Back</a>
+        <a routerLink="/editreport" class="btn btn-primary">Edit</a>
+        <a [routerLink]="['/deletereport', report.reportId]" class="btn btn-danger">Delete</a>
+      </div>
+      <h3 class="card-title">Amount to pay: <b>{{report.totalSum}} €</b></h3>
+    </div>
+
   </div>
 
 </div>
