Modify page header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <div class="card block">
-    <!--<img class="card-img-top" src="..." alt=" image cap">-->
+<div>
+  <div class="card title-div">
     <div class="card-body">
-      <h4 class="card-title">ExpenseReport <br></h4>
-      <a routerLink="/addreport" class="btn btn-primary">NewReport</a><a routerLink="/reportsview"
-                                                                         class="btn btn-primary">History</a>
+      <h3 class="card-title">Expense Reports</h3>
+      <div class="btn-group btn-group-lg">
+      <a routerLink="/addreport" class="btn btn-primary">Create Report</a>
+      <a routerLink="/reportsview" class="btn btn-primary">History Log</a>
+      </div>
     </div>
   </div>
   <div class="container">
