--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
+.title-div {
+  box-shadow: 0px 3px 5px rgba(0,0,0,0.5);
+  margin-bottom: 50px;
+  text-align: center;
+}
+
 .form-container {
   display:block;
   width:90%;
