--- a/src/app/reportview/reportview.component.html
+++ b/src/app/reportview/reportview.component.html
@@ -1,70 +1,75 @@
-<div class="card block">
-  <div class="card-body report-header">
-    <h4 class="card-title">Report ID: <b>{{report.reportId}}</b></h4>
-    <div align="left">
-      <h5 class="card-title">Employee: <b>{{report.employee}}</b></h5>
-      <h5 class="card-title">Report period: <b>{{report.startDate | date:'yMd'}} - {{report.endDate | date:'yMd'}}</b></h5>
-    </div>
-  </div>
-</div>
-
-<div class="card block">
-  <div class="card-body">
-  <div style="text-align: left">
-    <h3>Expense documents</h3>
-  </div>
-
-
-<table *ngIf="report" class="table table-condensed">
-  <thead class="">
-  <tr>
-    <td></td>
-    <td class="text-center">Date</td>
-    <td class="text-center">Content</td>
-    <td class="text-center">Field</td>
-    <td class="text-center">Issuer</td>
-    <td class="text-center">Project</td>
-    <td class="text-center">Credit card</td>
-    <td class="text-center">Sum</td>
-    <td class="text-center">Currency</td>
-    <td class="text-center">Sum (EUR)</td>
-  </tr>
-  </thead>
-  <tbody>
-
-
-  <tr *ngFor="let document of report.documents">
-    <td style="font-weight: bold">{{ document.docId }}</td>
-    <td style="text-align: center">{{ document.date | date:'yMd'}}</td>
-    <td style="text-align: center">{{ document.content }}</td>
-    <td style="text-align: center">{{ document.field }}</td>
-    <td style="text-align: center">{{ document.issuer }}</td>
-    <td style="text-align: center">{{ document.project }}</td>
-    <td style="text-align: center"> <input type="checkbox" [checked]="document.creditCard" disabled> </td>
-    <td style="text-align: center">{{ document.sum }}</td>
-    <td style="text-align: center">{{ document.currency }}</td>
-    <td style="font-weight: 600; text-align: center">{{ document.sumEur }}</td>
-
-  </tr>
-  </tbody>
-</table>
-  </div>
-</div>
-
-<div class="card" align="right">
-  <div class="card-body">
-    <h5 class="card-title">Total expenses: <b>{{report.expenseSum}} €</b></h5>
-    <h5 class="card-title">Paid with credit card: <b>{{report.creditSum}} €</b></h5>
-    <hr>
+<div class="container">
+  <div class="report-header">
+    <h2>Report nr. {{report.reportId}}</h2>
     <div class="report-end">
-      <div>
-        <a routerLink="/reportsview" class="btn btn-info"><< Back</a>
-        <a routerLink="/editreport" class="btn btn-primary">Edit</a>
-        <a [routerLink]="['/deletereport', report.reportId]" class="btn btn-danger">Delete</a>
-      </div>
-      <h3 class="card-title">Amount to pay: <b>{{report.totalSum}} €</b></h3>
+      <a routerLink="/reportsview" class="btn btn-info"><< Back</a>
+      <a routerLink="/editreport" class="btn btn-primary">Edit</a>
+      <a [routerLink]="['/deletereport', report.reportId]" class="btn btn-danger">Delete</a>
     </div>
-
   </div>
+  <hr>
+  <div class="form-header">
+
+    <div>
+      <label>Name</label>
+      <h4>{{report.employee}}</h4>
+
+      <label>Start date</label>
+      <h4>{{report.startDate | date:'yMd'}}</h4>
+
+      <label>End date</label>
+      <h4>{{report.endDate | date:'yMd'}}</h4>
+    </div>
+    <div>
+      <h5 class="card-title">Total expenses: <b>{{report.expenseSum}} €</b></h5>
+      <h5 class="card-title">Paid with credit card: <b>{{report.creditSum}} €</b></h5>
+      <hr>
+      <h3 class="card-title">Amount to pay: <b>{{report.totalSum}} €</b></h3>
+      <hr>
+      <h4 style="text-align: center">Status: <span class="status">{{report.status}}</span></h4>
+    </div>
+  </div>
+  <hr>
+
+  <div class="card">
+    <div class="card-header">
+      <h3>Expense documents</h3>
+    </div>
+    <div class="card-body">
+      <table *ngIf="report" class="table table-condensed">
+        <thead class="">
+        <tr>
+          <td></td>
+          <td class="text-center">Date</td>
+          <td class="text-center">Content</td>
+          <td class="text-center">Field</td>
+          <td class="text-center">Issuer</td>
+          <td class="text-center">Project</td>
+          <td class="text-center">Credit card</td>
+          <td class="text-center">Sum</td>
+          <td class="text-center">Currency</td>
+          <td class="text-center">Sum (EUR)</td>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr *ngFor="let document of report.documents">
+          <td style="font-weight: bold">{{ document.docId }}</td>
+          <td style="text-align: center">{{ document.date | date:'yMd'}}</td>
+          <td style="text-align: center">{{ document.content }}</td>
+          <td style="text-align: center">{{ document.field }}</td>
+          <td style="text-align: center">{{ document.issuer }}</td>
+          <td style="text-align: center">{{ document.project }}</td>
+          <td style="text-align: center"> <input type="checkbox" [checked]="document.creditCard" disabled> </td>
+          <td style="text-align: center">{{ document.sum }}</td>
+          <td style="text-align: center">{{ document.currency }}</td>
+          <td style="font-weight: 600; text-align: center">{{ document.sumEur }}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+
 
 </div>
